--- a/TibiaHeleper/Windows/WalkerWindow.xaml
+++ b/TibiaHeleper/Windows/WalkerWindow.xaml
@@ -16,18 +16,16 @@
             <Button x:Name="DeleteButton" Content="Delete" HorizontalAlignment="Left" Margin="78,247,0,0" VerticalAlignment="Top" Width="69" Click="Delete"/>
 
             <Label x:Name="TrackingLabel" Content="Tracking" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="167,12,0,0" VerticalAlignment="Top" Width="163"/>
-            <Button x:Name="startButton" Content="Start" HorizontalAlignment="Left" Margin="193,38,0,0" VerticalAlignment="Top" Width="51" Click="StartTracking"/>
-            <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="259,38,0,0" VerticalAlignment="Top" Width="51" Click="StopTracking"/>
-            <Button x:Name="AccuracyButton" Content="Set Accuracy" HorizontalAlignment="Left" Margin="225,68,0,0" VerticalAlignment="Top" Width="107" Height="23" Click="SetAccuracy"/>
-            <TextBox x:Name="Accuracy" HorizontalAlignment="Left" Height="23" Margin="167,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
-            <TextBox x:Name="startLabel" HorizontalAlignment="Left" Height="23" Margin="167,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
-            <Button x:Name="SetStartLabelButton" Content="Set Start Label" HorizontalAlignment="Left" Margin="225,105,0,0" VerticalAlignment="Top" Width="107" Height="24" Click="SetStartLabel"/>
+            <Button x:Name="startButton" Content="Start" HorizontalAlignment="Left" Margin="189,40,0,0" VerticalAlignment="Top" Width="51" Click="StartTracking"/>
+            <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="255,40,0,0" VerticalAlignment="Top" Width="51" Click="StopTracking"/>
+            <Button x:Name="AccuracyButton" Content="Set Accuracy" HorizontalAlignment="Left" Margin="225,86,0,0" VerticalAlignment="Top" Width="107" Height="23" Click="SetAccuracy"/>
+            <TextBox x:Name="Accuracy" HorizontalAlignment="Left" Height="23" Margin="167,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
+            <TextBox x:Name="startLabel" HorizontalAlignment="Left" Height="23" Margin="167,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="51"/>
+            <Button x:Name="SetStartLabelButton" Content="Set Start Label" HorizontalAlignment="Left" Margin="225,114,0,0" VerticalAlignment="Top" Width="107" Height="24" Click="SetStartLabel"/>
 
-            <Button x:Name="labelButton" Content="Add Label" HorizontalAlignment="Left" FontSize="10" Margin="279,162,0,0" VerticalAlignment="Top" Width="51" Height="23" Click="AddLabel"/>
-            <TextBox x:Name="LabelTextBox" HorizontalAlignment="Left" Height="23" Margin="167,161,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="107"/>
+            <Button x:Name="labelButton" Content="Add Label" HorizontalAlignment="Left" FontSize="10" Margin="279,172,0,0" VerticalAlignment="Top" Width="51" Height="23" Click="AddLabel"/>
+            <TextBox x:Name="LabelTextBox" HorizontalAlignment="Left" Height="23" Margin="167,171,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="107"/>
 
-            <Button x:Name="AddActionButton" Content="Add Action" HorizontalAlignment="Left" Margin="346,237,0,0" VerticalAlignment="Top" Width="174" Click="AddAction"/>
-            <Button x:Name="ProcedureButton" Content="Procedure" HorizontalAlignment="Left" Margin="532,237,0,0" VerticalAlignment="Top" Width="101" Click="Procedure"/>
 
             <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="167,237,0,0" VerticalAlignment="Top" Width="83" Click="Save"/>
             <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="255,237,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
@@ -37,7 +35,11 @@
 
         <Grid Name="ActionGrid" Margin="337,0,0,0.4">
 
-            <Grid Name="PositionGrid" Margin="0,4,110.6,165" Visibility="Visible">
+            <Label x:Name="ActionTypeLabel" Content="Action Type" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="195,10,0,0" VerticalAlignment="Top" Width="101"/>
+            <ListBox x:Name="ActionsListBox" HorizontalAlignment="Left" Padding="0" Height="183" Margin="195,41,0,0" VerticalAlignment="Top" Width="101" SelectionChanged="ActionSelected" />
+            <Button x:Name="ProcedureButton" Content="Procedure" HorizontalAlignment="Left" Margin="195,242,0,0" VerticalAlignment="Top" Width="101" Click="Procedure"/>
+
+            <Grid Name="PositionGrid" Margin="0,34,110.6,135" Visibility="Hidden">
                 <Button x:Name="NorthButton" Content="N" HorizontalAlignment="Left" Margin="5,7,0,0" VerticalAlignment="Top" Width="20" Click="North"/>
                 <Button x:Name="SouthButton" Content="S" HorizontalAlignment="Left" Margin="30,7,0,0" VerticalAlignment="Top" Width="20" Click="South"/>
                 <Button x:Name="EastButton" Content="E" HorizontalAlignment="Left" Margin="55,7,0,0" VerticalAlignment="Top" Width="20" Click="East"/>
@@ -53,27 +55,66 @@
                 <Button x:Name="GetMyCoordinatesButton" Content="Get Actual Position" HorizontalAlignment="Left" Margin="5,82,0,0" VerticalAlignment="Top" Width="179" Click="GetMyCoordinates" Height="23"/>
             </Grid>
 
-            <Grid Name="MouseClickGrid" Margin="0,130,111.2,135" Visibility="Hidden">
+            <Grid Name="MouseClickGrid" Margin="0,145,110.6,121" Visibility="Hidden">
                 <CheckBox x:Name="RightClickCheckBox" Content="Right Mouse Button Click" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="170"/>
             </Grid>
 
-            <Grid Name="TextActionGrid" Margin="0,160,111.2,55" Visibility="Visible">
+            <Grid Name="TextActionGrid" Margin="0,160,111.2,55" Visibility="Hidden">
                 <Label x:Name="InputDescriptionLabel" Content="Hotkey" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Width="175"/>
                 <TextBox x:Name="ActionTextBox" HorizontalAlignment="Left" Height="23" Margin="10,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
             </Grid>
 
-            <Label x:Name="ActionTypeLabel" Content="Action Type" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="195,10,0,0" VerticalAlignment="Top" Width="101"/>
-            <ListBox x:Name="ActionsListBox" HorizontalAlignment="Left" Padding="0" Height="183" Margin="195,41,0,0" VerticalAlignment="Top" Width="101" SelectionChanged="ActionSelected" />
+
+            <Grid Name="ProcedureGrid" Visibility="Hidden">
+                <Button x:Name="SaveProcedureButton" Content="Save Procedure" HorizontalAlignment="Left" Margin="166,237,0,0" VerticalAlignment="Top" Width="96" Click="SaveProcedure"/>
+                <Button x:Name="LoadProcedureButton" Content="Load Procedure" HorizontalAlignment="Left" Margin="267,237,0,0" VerticalAlignment="Top" Width="99" Click="LoadProcedure"/>
+                <Button x:Name="CancelProcedureButton" Content="Cancel" HorizontalAlignment="Left" Margin="371,237,0,0" VerticalAlignment="Top" Width="75" Click="HideProcedureGrid"/>
+                <Button x:Name="SelectAllButton" Content="Select All" HorizontalAlignment="Left" Margin="230,191,0,0" VerticalAlignment="Top" Width="75" Click="SelectAll"/>
+                <Button x:Name="DeselectAllButton" Content="Deselect All" HorizontalAlignment="Left" Margin="331,191,0,0" VerticalAlignment="Top" Width="75" Click="DeselectAll"/>
+
+            </Grid>
+            <Grid Name="ConditionButtonGrid" Margin="0,145,126.6,106" Visibility="Hidden">
+                <Button x:Name="CreateConditionButton" Content="Create Condition" HorizontalAlignment="Left" Margin="29,10,0,0" VerticalAlignment="Top" Width="134" Click="CreateCondition"/>
+
+            </Grid>
+
+            <Grid Name="ConditionGrid" Margin="0,10,-0.4,10" Visibility="Hidden" Background="White" >
+
+                <Button x:Name="GreaterButton" Content="Greater" HorizontalAlignment="Left" Margin="108,30,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="2.116,0.667" Click="GreaterButtonClicked"/>
+                <Button x:Name="SmallerButton"  Content="Smaller" HorizontalAlignment="Left" Margin="108,54,0,0" VerticalAlignment="Top" Width="57" Click="SmallerButtonClicked"/>
+                <Button x:Name="EqualButton" Content="Equal" HorizontalAlignment="Left" Margin="108,78,0,0" VerticalAlignment="Top" Width="57" Click="EqualButtonClicked"/>
+                <Button x:Name="NotEqualButton" Content="Not Equal" HorizontalAlignment="Left" Margin="108,102,0,0" VerticalAlignment="Top" Width="57" Click="NotEqualButtonClicked"/>
+
+                <Button x:Name="AndButton" Content="AND" HorizontalAlignment="Left" Margin="108,132,0,0" VerticalAlignment="Top" Width="57" Click="AndButtonClicked"/>
+                <Button x:Name="OrButton" Content="OR" HorizontalAlignment="Left" Margin="108,157,0,0" VerticalAlignment="Top" Width="57" Click="OrButtonClicked"/>
+                <Button x:Name="DeleteLastConditionButton" Content="Delete" HorizontalAlignment="Left" Margin="108,181,0,0" VerticalAlignment="Top" Width="57" Click="DeleteButtonClicked"/>
+
+                <Label x:Name="ValueLabel" Content="Value" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" Width="75" Height="27"/>
+                <TextBox x:Name="ValueTextBox" HorizontalAlignment="Left" Height="19" Margin="10,29,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+                <Button x:Name="ValueButton" Content="Value" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="75" Height="19" Click="AddValueButtonClicked"/>
+
+                <Button x:Name="HPButton" Content="HP" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="75" Click="AddHpButtonClicked"/>
+                <Button x:Name="ManaButton" Content="Mana" HorizontalAlignment="Left" Margin="10,96,0,0" VerticalAlignment="Top" Width="75" Click="AddManaButtonClicked"/>
+                <Button x:Name="CapButton" Content="Cap" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" Width="75" Click="AddCapButtonClicked"/>
+
+                <Label x:Name="ItemHotkeyLabel" Content="Item Hotkey" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="10,136,0,0" VerticalAlignment="Top" Width="75" Height="27"/>
+                <TextBox x:Name="ItemCountTextBox" HorizontalAlignment="Left" Height="19" Margin="10,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+                <Button x:Name="ItemCountButton" Content="Item Count" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" Width="75" Height="19" Click="ItemCountButtonClicked"/>
+
+                <Label x:Name="ConditionLabel" Content="Condition:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="170,4,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.068,0.078" Width="137"/>
+                <TextBlock x:Name="ConditionText" HorizontalAlignment="Left" Margin="170,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="170" Width="137"/>
+
+                <Button x:Name="CancelConditionButton" Content="Cancel" HorizontalAlignment="Left" Margin="208,232,0,0" VerticalAlignment="Top" Width="75" Click="CancelCondition"/>
+                <TextBox x:Name="ConditionFulfilledTextBox" HorizontalAlignment="Left" Height="23" Margin="208,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+                <Label x:Name="ConditionFulfilledLabel" Content="When Condition fulfield go to label: " HorizontalAlignment="Left" Margin="0,202,0,0" VerticalAlignment="Top" Width="207"/>
+
+
+            </Grid>
+
+            <Button x:Name="AddActionButton" Content="Add Action" HorizontalAlignment="Left" Margin="10,242,0,0" VerticalAlignment="Top" Width="174" Click="AddAction"/>
+
         </Grid>
 
-        <Grid Name="ProcedureGrid" Visibility="Hidden">
-            <Button x:Name="SaveProcedureButton" Content="Save Procedure" HorizontalAlignment="Left" Margin="166,237,0,0" VerticalAlignment="Top" Width="96" Click="SaveProcedure"/>
-            <Button x:Name="LoadProcedureButton" Content="Load Procedure" HorizontalAlignment="Left" Margin="267,237,0,0" VerticalAlignment="Top" Width="99" Click="LoadProcedure"/>
-            <Button x:Name="CancelProcedureButton" Content="Cancel" HorizontalAlignment="Left" Margin="371,237,0,0" VerticalAlignment="Top" Width="75" Click="HideProcedureGrid"/>
-            <Button x:Name="SelectAllButton" Content="Select All" HorizontalAlignment="Left" Margin="230,191,0,0" VerticalAlignment="Top" Width="75" Click="SelectAll"/>
-            <Button x:Name="DeselectAllButton" Content="Deselect All" HorizontalAlignment="Left" Margin="331,191,0,0" VerticalAlignment="Top" Width="75" Click="DeselectAll"/>
-
-        </Grid>
 
         <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
             <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
