--- a/TibiaHeleper/Windows/Targeting.xaml
+++ b/TibiaHeleper/Windows/Targeting.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
-        Title="Targeting" Height="342.4" Width="652.986"
+        Title="Targeting" Height="400" Width="652.986"
         Loaded="Load" Closing="Close">
     <Grid>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" SelectionChanged="SelectedAction"/>
-        <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="290,275,0,0" VerticalAlignment="Top" Width="65" Height="21" Click="Back"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="195" Margin="10,36,0,0" VerticalAlignment="Top" Width="100" SelectionChanged="SelectedAction"/>
+        <Button x:Name="BackButton" Content="Back" HorizontalAlignment="Left" Margin="290,339,0,0" VerticalAlignment="Top" Width="65" Height="21" Click="Back"/>
         <Label x:Name="nemaLabel" Content="Name" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="134,9,0,0" VerticalAlignment="Top" Width="140"/>
         <TextBox x:Name="Name" HorizontalAlignment="Left" Height="23" Margin="134,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140"/>
         <Label x:Name="minHPLabel" Content="Min HP%" HorizontalAlignment="Left" Margin="134,73,0,0" VerticalAlignment="Top" Width="65"/>
@@ -20,21 +20,18 @@
         <TextBox x:Name="Action" HorizontalAlignment="Left" Height="23" Margin="134,163,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140"/>
         <TextBox x:Name="maxDistance" HorizontalAlignment="Left" Height="23" Margin="290,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="81"/>
         <Label x:Name="maxDistanceLabel" Content="Max Distance" HorizontalAlignment="Left" Margin="290,73,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="upButton" Content="Up" HorizontalAlignment="Left" Margin="10,198,0,0" VerticalAlignment="Top" Width="45" Click="Up"/>
-        <Button x:Name="downButton" Content="Down" HorizontalAlignment="Left" Margin="65,198,0,0" VerticalAlignment="Top" Width="45" Click="Down"/>
+        <Button x:Name="upButton" Content="Up" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Width="45" Click="Up"/>
+        <Button x:Name="downButton" Content="Down" HorizontalAlignment="Left" Margin="65,256,0,0" VerticalAlignment="Top" Width="45" Click="Down"/>
         <Button x:Name="addButton" Content="Add" HorizontalAlignment="Left" Margin="134,198,0,0" VerticalAlignment="Top" Width="65" Click="Add"/>
         <Button x:Name="deleteButton" Content="Delete" HorizontalAlignment="Left" Margin="208,198,0,0" VerticalAlignment="Top" Width="65" Click="Delete"/>
-        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="208,276,0,0" VerticalAlignment="Top" Width="65" Click="Save"/>
-        <Button x:Name="editButton" Content="Apply edit" HorizontalAlignment="Left" Margin="22,237,0,0" VerticalAlignment="Top" Width="75" Click="Edit"/>
+        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="208,340,0,0" VerticalAlignment="Top" Width="65" Click="Save"/>
+        <Button x:Name="editButton" Content="Apply edit" HorizontalAlignment="Left" Margin="22,295,0,0" VerticalAlignment="Top" Width="75" Click="Edit"/>
 
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
-        </Grid>
+        
 
-        <CheckBox x:Name="FollowTargetCheckBox" Content="Follow Target" HorizontalAlignment="Left" Margin="290,168,0,0" VerticalAlignment="Top" Width="101" Height="18"/>
-        <CheckBox x:Name="DiagonalCheckBox" Content="Stay Diagonal" HorizontalAlignment="Left" Margin="290,142,0,0" VerticalAlignment="Top" Width="101"/>
-        <CheckBox x:Name="LookForFoodCheckBox" Content="Look For Food" HorizontalAlignment="Left" Margin="290,191,0,0" VerticalAlignment="Top" Width="101"/>
+        <CheckBox x:Name="FollowTargetCheckBox" Content="Follow Target" HorizontalAlignment="Left" Margin="134,258,0,0" VerticalAlignment="Top" Width="140" Height="18"/>
+        <CheckBox x:Name="DiagonalCheckBox" Content="Stay Diagonal" HorizontalAlignment="Left" Margin="134,235,0,0" VerticalAlignment="Top" Width="140"/>
+        <CheckBox x:Name="LookForFoodCheckBox" Content="Look For Food" HorizontalAlignment="Left" Margin="134,281,0,0" VerticalAlignment="Top" Width="140"/>
         <ListBox x:Name="LootListBox" HorizontalAlignment="Left" Height="130" Margin="405,28,0,0" VerticalAlignment="Top" Width="100"/>
         <ListBox x:Name="FoodListBox" HorizontalAlignment="Left" Height="130" Margin="530,28,0,0" VerticalAlignment="Top" Width="100"/>
         <Label x:Name="LootLabel" Content="Loot" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="405,1,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.969,-0.687" Width="100"/>
@@ -45,8 +42,18 @@
         <TextBox x:Name="HintTextBox" IsReadOnly="True" Background="LightGray" HorizontalAlignment="Left" Height="23" Margin="405,163,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="225"/>
         <Button x:Name="DeleteFromLootListButton" Content="Delete from loot" HorizontalAlignment="Left" Margin="405,236,0,0" VerticalAlignment="Top" Width="100" Click="DeleteFromLootList"/>
         <Button x:Name="DeleteFromFoodListButton" Content="Delete ftom food" HorizontalAlignment="Left" Margin="530,236,0,0" VerticalAlignment="Top" Width="100" Click="DeleteFromLootList"/>
-        <CheckBox x:Name="LootCheckBox" Content="Look for loot" HorizontalAlignment="Left" Margin="290,214,0,0" VerticalAlignment="Top" Width="101"/>
-        <Button x:Name="SetContainerForLootButton" Content="Set loot container" HorizontalAlignment="Left" Margin="405,261,0,0" VerticalAlignment="Top" Width="100" Click="SetLootContainer"/>
-        <Label x:Name="ActualLootContainerLabel" Content="Actual loot container: Default container" HorizontalAlignment="Left" Margin="405,277,0,0" VerticalAlignment="Top" Width="241"/>
+        <CheckBox x:Name="LootCheckBox" Content="Look for loot" HorizontalAlignment="Left" Margin="134,304,0,0" VerticalAlignment="Top" Width="140"/>
+        <Button x:Name="SetContainerForLootButton" Content="Set loot container" HorizontalAlignment="Left" Margin="530,285,0,0" VerticalAlignment="Top" Width="100" Click="SetLootContainer"/>
+        <Button x:Name="SetNextContainerButton" Content="Set next backpack" HorizontalAlignment="Left" Margin="405,285,0,0" VerticalAlignment="Top" Width="100" Click="SetNextContainer"/>
+
+        <Label x:Name="ActualLootContainerLabel" Content="Actual loot container: Default container" HorizontalAlignment="Left" Margin="405,334,0,0" VerticalAlignment="Top" Width="241"/>
+        <Label x:Name="ActualNextContainerLabel" Content="Next backpack: " HorizontalAlignment="Left" Margin="405,309,0,0" VerticalAlignment="Top" Width="225"/>
+        <CheckBox x:Name="OpenNextContainerCheckBox" Content="Open next backpack" HorizontalAlignment="Left" Margin="405,264,0,0" VerticalAlignment="Top" Height="15" Width="225"/>
+
+        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
+            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        </Grid>
+        
     </Grid>
 </Window>
